[package]
name = "beacon-api-checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.10", features = ["derive"] }
ethereum-consensus = { git = "https://github.com/ralexstokes/ethereum-consensus", rev="de14cb1399ae694275a65fb94702e859c9e15430" }
beacon-api-client = { git = "https://github.com/ralexstokes/beacon-api-client", rev="5d0fb80586fca4c9eaa0789db8a23d2e837c4fae" }
tokio = { version = "1", features = ["full"] }
url = "2.3.1"
eyre = "0.6.8"
thiserror = "1.0.40"
prometheus = "0.13.3"
lazy_static = "1.4.0"
axum = "0.6.11"
tracing = "0.1.37"
futures = "0.3.27"
tracing-subscriber = "0.3.16"
